--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     ext.lifecycle_version = "2.1.0"
     ext.liveDataKtx_version = '2.2.0-rc02'
     ext.coroutines_version = "1.3.2"
-
+    ext.picasso_version = '2.71828'
     repositories {
         google()
         jcenter()
