--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
     ext.liveDataKtx_version = '2.2.0-rc02'
     ext.coroutines_version = "1.3.2"
     ext.picasso_version = '2.71828'
+    ext.ktx_viewmodel_version = "2.2.0-rc03"
+
     repositories {
         google()
         jcenter()
