--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,14 @@ android {
         compose true
     }
 
+
+    composeOptions {
+        // ---- Solution to work with kapt annotation processor release on dev04
+        kotlinCompilerVersion "1.3.61-dev-withExperimentalGoogleExtensions-20200129"
+        kotlinCompilerExtensionVersion "0.1.0-dev04"
+    }
 // To inline the bytecode built with JVM target 1.8 into
 // bytecode that is being built with JVM target 1.6. (e.g. navArgs)
-
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -76,7 +80,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$liveDataKtx_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$ktx_viewmodel_version"
-
 
     // ---- Picasso load image
     implementation "com.squareup.picasso:picasso:$picasso_version"
