attempt 1 to use coroutine

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -23,6 +23,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     // --- Comment to use kapt annotation processor
 //    buildFeatures {
 //        compose true
@@ -37,6 +44,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation("androidx.compose:compose-runtime:$compose_version")
     // ---  Room database library
 
     implementation "androidx.room:room-runtime:$room_version"
@@ -47,4 +55,6 @@ dependencies {
     // --- Retrofit library
     implementation("com.squareup.retrofit2:retrofit:$retrofit_version")
     implementation("com.squareup.retrofit2:converter-gson:$retrofit_version")
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$liveDataKtx_version"
 }
