attempt to use workmanager

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -56,5 +56,8 @@ dependencies {
     implementation("com.squareup.retrofit2:retrofit:$retrofit_version")
     implementation("com.squareup.retrofit2:converter-gson:$retrofit_version")
 
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:$workmanager_version"
+
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$liveDataKtx_version"
 }
