--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "androidx.preference:preference-ktx:1.1.0"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     testImplementation 'junit:junit:4.12'
@@ -80,6 +82,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$liveDataKtx_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$ktx_viewmodel_version"
+
+
+    // Kotlin + coroutines
+    implementation "androidx.work:work-runtime-ktx:$workmanager_version"
 
     // ---- Picasso load image
     implementation "com.squareup.picasso:picasso:$picasso_version"
