--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     ext.coroutines_version = "1.3.2"
     ext.picasso_version = '2.71828'
     ext.ktx_viewmodel_version = "2.2.0-rc03"
-
+    ext.workmanager_version = "2.3.1"
     repositories {
         google()
         jcenter()
