--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.60-eap-25'
-    ext.compose_version = '0.1.0-dev06'
+    ext.kotlin_version = '1.4-M3'
+    ext.compose_version = '0.1.0-dev15'
     ext.room_version = '2.2.3'
     ext.retrofit_version = '2.6.0'
     ext.lifecycle_version = "2.1.0"
@@ -17,7 +17,7 @@ buildscript {
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0-alpha08'
+        classpath 'com.android.tools.build:gradle:4.1.0-alpha07'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
