design inifite scrolling

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -63,3 +63,10 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$liveDataKtx_version"
 }
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs += ["-Xallow-jvm-ir-dependencies", "-Xskip-prerelease-check"]
+    }
+}
