--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+//    ext.kotlin_version = '1.4.0-rc'
     ext.kotlin_version = '1.4-M3'
     ext.compose_version = '0.1.0-dev15'
     ext.room_version = '2.2.3'
@@ -36,3 +37,7 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+//beforeEvaluate {
+//    prepareKotlinBuildScriptModel
+//}
